<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Com1714080901123Activity01">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#007BFF"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!--
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="horizontal"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="right|center"
        app:srcCompat="@android:drawable/ic_dialog_email" />
    -->

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:stretchColumns="4"
        android:shrinkColumns="0,1,2,3,4">

        <TableRow android:background="#007BFF">

            <Button
                android:id="@+id/button1"
                android:layout_height="wrap_content"
                android:background="#007BFF"
                android:drawableTop="@drawable/squid_black"
                android:text="@string/button_home_page"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button2"
                android:background="#007BFF"
                android:drawableTop="@drawable/map_black"
                android:text="@string/button_map_search"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button3"
                android:background="#007BFF"
                android:drawableTop="@drawable/clothing_black"
                android:text="@string/button_clothing"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button4"
                android:background="#007BFF"
                android:drawableTop="@drawable/count_black"
                android:text="@string/button_skill"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button5"
                android:background="#007BFF"
                android:drawableTop="@drawable/logo_amiibo"
                android:text="@string/button_amiibo"
                android:textColor="#ffffff" />
        </TableRow>
    </TableLayout>

</android.support.design.widget.CoordinatorLayout>